--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@ border-radius:16px;
 /* الاسم تحت الكلام الانجليزي */
 .name{
 position:absolute;
-top:58%;   /* مكان الاسم تحت النص الإنجليزي */
-left:63%;  /* يمين الصورة */
+top:68%;   /* نزّلناه تحت النص الإنجليزي */
+left:63%;
 transform:translate(-50%,-50%);
 color:#1c3d6b;
-font-size:30px;
+font-size:32px;
 font-weight:bold;
 }
-
 </style>
 </head>
 
