--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ border-radius:16px;
 /* الاسم تحت الكلام الانجليزي */
 .name{
 position:absolute;
-top:68%;   /* نزّلناه تحت النص الإنجليزي */
-left:63%;
+top:72%;      /* نزّلناه تحت شوي */
+left:72%;     /* حرّكناه لليمين */
 transform:translate(-50%,-50%);
 color:#1c3d6b;
 font-size:32px;
