--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ border-radius:16px;
 /* الاسم تحت الكلام الانجليزي */
 .name{
 position:absolute;
-top:72%;      /* نزّلناه تحت شوي */
-left:72%;     /* حرّكناه لليمين */
+top:75%;      /* نزول تحت */
+left:80%;     /* يمين أكثر */
 transform:translate(-50%,-50%);
 color:#1c3d6b;
-font-size:32px;
+font-size:24px;   /* صغرنا الخط */
 font-weight:bold;
 }
 </style>
