--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@ border-radius:16px;
 /* الاسم تحت الكلام الانجليزي */
 .name{
 position:absolute;
-top:71%;      /* نزول تحت */
-left:80%;     /* يمين أكثر */
+top:70%;
+left:82%;
 transform:translate(-50%,-50%);
 color:#1c3d6b;
-font-size:14px;   /* صغرنا الخط */
+font-size:14px;
 font-weight:bold;
+white-space:nowrap;   /* هذا المهم */
 }
 </style>
 </head>
