--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ramadan Kareem</title>
+<title>تهنئة رمضان</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
+
 body{
 margin:0;
 font-family:'Cairo',sans-serif;
-background:#0e1b3a;
+background:#0b1e3f;
 height:100vh;
 display:flex;
 justify-content:center;
@@ -19,7 +20,7 @@ align-items:center;
 flex-direction:column;
 }
 
-/* ادخال الاسم */
+/* صفحة البداية */
 .start{
 text-align:center;
 color:white;
@@ -27,7 +28,7 @@ color:white;
 
 .start input{
 padding:14px;
-width:260px;
+width:250px;
 border-radius:10px;
 border:none;
 font-size:16px;
@@ -40,7 +41,7 @@ margin-top:10px;
 padding:12px 30px;
 border:none;
 border-radius:10px;
-background:#00bcd4;
+background:#1c89ff;
 color:#fff;
 font-size:16px;
 cursor:pointer;
@@ -49,56 +50,87 @@ cursor:pointer;
 /* الكرت */
 .card{
 display:none;
+width:720px;
+max-width:92%;
+background:#fff;
+border-radius:20px;
+overflow:hidden;
 position:relative;
-width:700px;
-max-width:95%;
+box-shadow:0 25px 70px rgba(0,0,0,0.5);
 }
 
-.card img{
+/* الصورة */
+.card img.bg{
 width:100%;
-border-radius:16px;
+display:block;
 }
 
-/* الاسم تحت الكلام الانجليزي */
-.name{
-position:absolute;
-top:70%;
-left:81%;
-transform:translate(-50%,-50%);
-color:#1c3d6b;
-font-size:12px;
-font-weight:bold;
-white-space:nowrap;   /* هذا المهم */
+/* الاسم */
+.name{ position: absolute;
+top: 70%; left: 81%;
+transform: translate(-50%,-50%); color: #1c3d6b; font-size:12px;
+font-weight: bold; white-space:nowrap;
+ا# هذا المهم */
+｝
+/* زر حفظ */
+.saveBtn{
+margin-top:20px;
+padding:14px 40px;
+border:none;
+border-radius:14px;
+background:#1c89ff;
+color:white;
+font-size:18px;
+cursor:pointer;
+display:none;
 }
+
 </style>
 </head>
 
 <body>
 
 <div class="start" id="startPage">
-<h2>اكتب اسمك</h2>
+<h2>اكتب اسمك لعرض التهنئة</h2>
 <input type="text" id="username" placeholder="اكتب الاسم هنا">
 <br>
 <button onclick="showCard()">عرض التهنئة</button>
 </div>
 
 <div class="card" id="card">
-<img src="ramadan.JPG">
+
+<!-- الصورة الجديدة -->
+<img src="ramadan.jpg" class="bg">
+
+<!-- الاسم -->
 <div class="name" id="nameText"></div>
+
 </div>
+
+<button class="saveBtn" id="saveBtn" onclick="saveImage()">حفظ الصورة</button>
+
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 <script>
 function showCard(){
 let name=document.getElementById("username").value;
-
 if(name==""){
 alert("اكتب الاسم أول");
 return;
 }
-
 document.getElementById("nameText").innerText=name;
 document.getElementById("startPage").style.display="none";
 document.getElementById("card").style.display="block";
+document.getElementById("saveBtn").style.display="block";
+}
+
+function saveImage(){
+html2canvas(document.getElementById("card"),{scale:2}).then(canvas=>{
+let link=document.createElement("a");
+link.download="ramadan.png";
+link.href=canvas.toDataURL();
+link.click();
+});
 }
 </script>
 
