--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ display:none;
 <div class="card" id="card">
 
 <!-- الصورة الجديدة -->
-<img src="ramadan.jpg" class="bg">
+<img src="ramadan.JPG" class="bg">
 
 <!-- الاسم -->
 <div class="name" id="nameText"></div>
